--- a/apps/almacen/templates/layouts/plantilla.html
+++ b/apps/almacen/templates/layouts/plantilla.html
@@ -44,7 +44,7 @@
                       <a class="nav-link" href="{% url "categorias" %}">Categorias</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
+                      <a class="nav-link" href="{% url "productos" %}">Productos</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link disabled" href="#">Disabled</a>
