--- a/apps/almacen/templates/layouts/plantilla.html
+++ b/apps/almacen/templates/layouts/plantilla.html
@@ -47,7 +47,7 @@
                       <a class="nav-link" href="{% url "productos" %}">Productos</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link disabled" href="#">Disabled</a>
+                      <a class="nav-link" href="{% url "proveedores" %}">Proveedores</a>
                     </li>
                   </ul>
                 </div>
