crud ventas y correcciones

--- a/apps/almacen/templates/categoria/editar_categoria.html
+++ b/apps/almacen/templates/categoria/editar_categoria.html
@@ -32,7 +32,7 @@ Editar-Categoria
                     </div>
                     <div class="modal-footer">
                         <a href="{% url "categorias" %}" class="btn btn-secondary">Cancelar</a>
-                        <button type="submit" class="btn btn-primary">Actualizar Carrera</button>
+                        <button type="submit" class="btn btn-primary">Actualizar Categoria</button>
                     </div>
                 </form>
             </div>
