--- a/apps/almacen/templates/producto/editar_producto.html
+++ b/apps/almacen/templates/producto/editar_producto.html
@@ -54,7 +54,7 @@ Editar-Producto
                     </div>
                     <div class="modal-footer">
                         <a href="{% url "productos" %}" class="btn btn-secondary">Cancelar</a>
-                        <button type="submit" class="btn btn-primary">Actualizar Carrera</button>
+                        <button type="submit" class="btn btn-primary">Actualizar Producto</button>
                       </div>
                 </form>
             </div>
