arreglos en tablas proveedores y ventas

--- a/apps/almacen/templates/proveedor/proveedores.html
+++ b/apps/almacen/templates/proveedor/proveedores.html
@@ -8,37 +8,38 @@ Proveedores
 {% block content %}
 
 <div class="container">
-    <!--Titulo-->
+    <!-- Titulo -->
     <h1 class="text-center mt-4">PROVEEDORES</h1>
-    <!--Verifica si hay caegorias-->
+    <!-- Verifica si hay proveedores -->
     <button type="button" class="btn btn-primary mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal">+ Agregar Proveedor</button>
     {% if proveedores %}
-    <div class="table-responsive">
-        <table class="table table-hover table-striped text-center" id="tabla">
-            <thead class="thead-primary">
-                <tr>
-                    <th>Nombre del proveedor</th>
-                    <th>Dirección</th>
-                    <th>telefono</th>
-                    <th>Correo electronico</th>
-                </tr>                
-            </thead>
-            <tbody>
-                {% for proveedor in proveedores %}
+        <div class="table-responsive">
+            <table class="table table-hover table-striped text-center" id="tabla">
+                <thead class="thead-primary">
                     <tr>
-                        <td>{{proveedor.nombre_prov}}</td>
-                        <td>{{proveedor.direccion_prov}}</td>
-                        <td>{{proveedor.telefono_prov}}</td>
-                        <td>{{proveedor.email_prov}}</td>
-                        <td>
-                            <a href="{% url 'editar_proveedor' id=proveedor.id %}" class="btn btn-warning">Editar</a>
-                            <a href="javascript:void(0)" onclick="eliminarFila('/eliminar_proveedor/{{ proveedor.id }}', 'Proveedor')" class="btn btn-danger">Eliminar</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+                        <th>Nombre del proveedor</th>
+                        <th>Dirección</th>
+                        <th>Teléfono</th>
+                        <th>Correo electrónico</th>
+                        <th>Acciones</th>
+                    </tr>                
+                </thead>
+                <tbody>
+                    {% for proveedor in proveedores %}
+                        <tr>
+                            <td>{{proveedor.nombre_prov}}</td>
+                            <td>{{proveedor.direccion_prov}}</td>
+                            <td>{{proveedor.telefono_prov}}</td>
+                            <td>{{proveedor.email_prov}}</td>
+                            <td>
+                                <a href="{% url 'editar_proveedor' id=proveedor.id %}" class="btn btn-warning">Editar</a>
+                                <a href="javascript:void(0)" onclick="eliminarFila('/eliminar_proveedor/{{ proveedor.id }}', 'Proveedor')" class="btn btn-danger">Eliminar</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     {% else %}
         <div class="alert alert-warning mt-4 text-center">NO HAY REGISTROS</div>
     {% endif %}
@@ -52,7 +53,7 @@ Proveedores
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> 
             </div>
             <div class="modal-body">
-                <form action="{% url 'crear_proveedor' %}" method="POST" id="form_categoria">
+                <form action="{% url 'crear_proveedor' %}" method="POST" id="form_proveedor">
                     {% csrf_token %}
                     <div class="mb-4">
                         <label for="nombre_prov" class="form-label">Nombre del proveedor</label>
