--- a/apps/almacen/templates/venta/ventas.html
+++ b/apps/almacen/templates/venta/ventas.html
@@ -31,7 +31,7 @@ Ventas
                             <td>{{ venta.fk_id_producto}}</td>
                             <td>{{ venta.total_venta|floatformat:2|intcomma }}</td>
                             <td>
-                                <a href=""><img src="{% static 'img/lista.png' %}" alt="" width="30"></a>
+                                <a href="{% url "detalles" id=venta.id%}"><img src="{% static 'img/lista.png' %}" alt="" width="30"></a>
                             </td>
                             <td>
                                 <a href="{% url 'editar_venta' id=venta.id %}" class="btn btn-warning">Editar</a>
