--- a/apps/almacen/templates/layouts/plantilla.html
+++ b/apps/almacen/templates/layouts/plantilla.html
@@ -33,28 +33,37 @@
 
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'inicio' %}">
+                    <img src="{% static 'img/store-front.png' %}" alt="" width="30" class="d-inline-block align-text-top">
+                    Mi Tienda
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="{% url "inicio" %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url "categorias" %}">Categorias</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url "productos" %}">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url "proveedores" %}">Proveedores</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url "ventas" %}">Ventas</a>
-                    </li>
-                  </ul>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'inicio' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'categorias' %}">Categorías</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'productos' %}">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'proveedores' %}">Proveedores</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'ventas' %}">Ventas</a>
+                        </li>
+                    </ul>
                 </div>
-              </nav>
+            </div>
+          </nav>
+          
         </header>
         <main>
             {% block content %}
