--- a/apps/almacen/templates/index.html
+++ b/apps/almacen/templates/index.html
@@ -1,1 +1,55 @@
 {% extends "layouts/plantilla.html" %}
+
+{% block title %}
+Inicio - Mi Tienda
+{% endblock title %}
+
+{% block content %}
+<div class="container mt-5">
+    <div class="jumbotron text-center">
+        <h1 class="display-4">Bienvenido a Mi Tienda</h1>
+        <p class="lead">Administra tus productos, categorías, proveedores y ventas de manera eficiente.</p>
+        <hr class="my-4">
+        <p>Utiliza el menú de navegación para acceder a las diferentes secciones del sistema.</p>
+    </div>
+
+    <div class="row mt-5">
+        <div class="col-md-3">
+            <div class="card text-center h-100">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">Categorías</h5>
+                    <p class="card-text flex-grow-1">Gestiona las categorías de productos.</p>
+                    <a href="{% url 'categorias' %}" class="btn btn-primary mt-auto">Ver Categorías</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card text-center h-100">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">Productos</h5>
+                    <p class="card-text flex-grow-1">Administra los productos disponibles en la tienda.</p>
+                    <a href="{% url 'productos' %}" class="btn btn-primary mt-auto">Ver Productos</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card text-center h-100">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">Proveedores</h5>
+                    <p class="card-text flex-grow-1">Gestiona la información de los proveedores.</p>
+                    <a href="{% url 'proveedores' %}" class="btn btn-primary mt-auto">Ver Proveedores</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card text-center h-100">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">Ventas</h5>
+                    <p class="card-text flex-grow-1">Revisa y administra las ventas realizadas.</p>
+                    <a href="{% url 'ventas' %}" class="btn btn-primary mt-auto">Ver Ventas</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock content %}
