--- a/apps/almacen/templates/layouts/plantilla.html
+++ b/apps/almacen/templates/layouts/plantilla.html
@@ -59,6 +59,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'ventas' %}">Ventas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'compras' %}">Compras</a>
+                        </li>
                     </ul>
                 </div>
             </div>
