--- a/apps/almacen/templates/producto/editar_producto.html
+++ b/apps/almacen/templates/producto/editar_producto.html
@@ -14,11 +14,11 @@ Editar-Producto
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar Producto</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Editar Producto</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <!-- Formulario para agregar producto -->
+                <!-- Formulario para editar producto -->
                 <form action="{% url 'procesar_editar_producto' %}" method="POST" id="form_producto">
                     {% csrf_token %}
                     <input type="text" name="id" value="{{producto.id}}" hidden name="id" id="id"/>
@@ -40,6 +40,15 @@ Editar-Producto
                         </select>
                     </div>
                     <div class="mb-4">
+                        <label for="fk_id_proveedor" class="form-label">Proveedor</label> <!-- Nuevo campo para proveedor -->
+                        <select class="form-control" name="fk_id_proveedor" id="fk_id_proveedor">
+                            <option value="">-- Seleccione el proveedor --</option>
+                            {% for proveedor in proveedores %}
+                                <option value="{{proveedor.id}}">{{proveedor.nombre_prov}}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="mb-4">
                         <label for="precio_prod" class="form-label">Precio Del producto</label>
                         <input type="text" name="precio_prod" placeholder="Ejemplo: 1500.00" id="precio_prod" required class="form-control" value="{{producto.precio_prod}}"/>
                     </div>
@@ -53,7 +62,7 @@ Editar-Producto
                         value="{{producto.codigo_barras_prod}}"/>
                     </div>
                     <div class="modal-footer">
-                        <a href="{% url "productos" %}" class="btn btn-secondary">Cancelar</a>
+                        <a href="{% url 'productos' %}" class="btn btn-secondary">Cancelar</a>
                         <button type="submit" class="btn btn-primary">Actualizar Producto</button>
                       </div>
                 </form>
@@ -69,9 +78,9 @@ Editar-Producto
         myModal.show()
     });
 
+    // Establecer los valores seleccionados en los campos de categoría y proveedor
     document.getElementById("fk_id_categoria").value = "{{producto.fk_id_categoria.id}}";
-
+    document.getElementById("fk_id_proveedor").value = "{{producto.fk_id_proveedor.id}}";
 </script>
 
 {% endblock content %}
-
