creacion crud del modelo MovimientoInventario

--- a/apps/almacen/templates/layouts/plantilla.html
+++ b/apps/almacen/templates/layouts/plantilla.html
@@ -62,6 +62,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'compras' %}">Compras</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'movimientos' %}">Inventario</a>
+                        </li>
                     </ul>
                 </div>
             </div>
