--- a/apps/almacen/templates/index.html
+++ b/apps/almacen/templates/index.html
@@ -12,9 +12,9 @@ Inicio - Mi Tienda
         <p class="lead text-muted">Administra tu negocio de manera eficiente y sencilla.</p>
     </div>
 
-    <div class="row">
-        <div class="col-md-4 mb-4">
-            <div class="card border-0 shadow-sm h-100">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+            <div class="card h-100 shadow-sm border-0">
                 <div class="card-body text-center p-4">
                     <i class="fas fa-tags fa-3x text-primary mb-3"></i>
                     <h4 class="card-title text-primary">Categorías</h4>
@@ -23,8 +23,9 @@ Inicio - Mi Tienda
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
-            <div class="card border-0 shadow-sm h-100">
+
+        <div class="col">
+            <div class="card h-100 shadow-sm border-0">
                 <div class="card-body text-center p-4">
                     <i class="fas fa-box-open fa-3x text-success mb-3"></i>
                     <h4 class="card-title text-success">Productos</h4>
@@ -33,8 +34,9 @@ Inicio - Mi Tienda
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
-            <div class="card border-0 shadow-sm h-100">
+
+        <div class="col">
+            <div class="card h-100 shadow-sm border-0">
                 <div class="card-body text-center p-4">
                     <i class="fas fa-truck fa-3x text-warning mb-3"></i>
                     <h4 class="card-title text-warning">Proveedores</h4>
@@ -43,8 +45,9 @@ Inicio - Mi Tienda
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
-            <div class="card border-0 shadow-sm h-100">
+
+        <div class="col">
+            <div class="card h-100 shadow-sm border-0">
                 <div class="card-body text-center p-4">
                     <i class="fas fa-chart-line fa-3x text-danger mb-3"></i>
                     <h4 class="card-title text-danger">Ventas</h4>
@@ -53,8 +56,9 @@ Inicio - Mi Tienda
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
-            <div class="card border-0 shadow-sm h-100">
+
+        <div class="col">
+            <div class="card h-100 shadow-sm border-0">
                 <div class="card-body text-center p-4">
                     <i class="fas fa-shopping-cart fa-3x text-info mb-3"></i>
                     <h4 class="card-title text-info">Compras</h4>
@@ -63,13 +67,25 @@ Inicio - Mi Tienda
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
-            <div class="card border-0 shadow-sm h-100">
+
+        <div class="col">
+            <div class="card h-100 shadow-sm border-0">
                 <div class="card-body text-center p-4">
                     <i class="fas fa-exchange-alt fa-3x text-purple mb-3"></i>
                     <h4 class="card-title text-purple">Movimientos</h4>
                     <p class="card-text text-muted">Controla los movimientos de inventario.</p>
                     <a href="{% url 'movimientos' %}" class="btn btn-outline-purple btn-sm">Ver Movimientos</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card h-100 shadow-sm border-0">
+                <div class="card-body text-center p-4">
+                    <i class="fas fa-file-excel fa-3x text-success mb-3"></i>
+                    <h4 class="card-title text-success">Exel</h4>
+                    <p class="card-text text-muted">Puedes generar un archivo Excel de todas las tablas.</p>
+                    <a href="{% url 'exportar_movimientos_excel' %}" class="btn btn-outline-success btn-sm">Generar Exel</a>
                 </div>
             </div>
         </div>
